# jww-parser-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/jww-core/: Cargo.toml
crates/jww-core/src/: error.rs  lib.rs  reader.rs  types.rs
crates/jww-core/tests/: compatibility_test.rs  integration_test.rs
crates/jww-dxf/: Cargo.toml
crates/jww-dxf/src/: converter.rs  lib.rs  types.rs  writer.rs
crates/jww-dxf/src/testing/: dxf_parser.rs  mod.rs
crates/jww-wasm/: Cargo.toml
crates/jww-wasm/src/: lib.rs
scripts/: compatibility_test.sh
