[package]
name = "jww-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde_json = "1.0"
thiserror.workspace = true
serde.workspace = true
jww-core = { path = "../jww-core" }
jww-dxf = { path = "../jww-dxf" }
